# striders

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml  rust-ci.yaml
examples/: benchmark.ipynb  benchmark.py
python/striders/: __init__.py  __init__.pyi
src/: explainer.rs  lib.rs  main.rs
tests/: explainer_test.rs
