[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "striders"
version = "0.0.2"
description = "Efficient surrogate-based model explanations (XAI) using landmark-based kernel approximations for scalable SHAP values."
authors = [
    {name = "RektPunk", email = "rektpunk@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
]

[project.urls]
repository = "https://github.com/RektPunk/striders"

[dependency-groups]
dev = [
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "shap>=0.44.1",
    "ucimlrepo>=0.0.7",
]

[tool.maturin]
python-source = "python"
module-name = "striders"
include = ["python/striders/*.pyi", "python/striders/py.typed"]
